apps/base/monitoring-prometheus-operator/deploy/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-k8s
  labels:
    prometheus-target: prometheus-k8s
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
  sessionAffinity: ClientIP
