apps/base/monitoring-prometheus-operator/deploy/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Prometheus
    gethomepage.dev/description: Monitoring solution
    gethomepage.dev/icon: prometheus
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=prometheus"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - prometheus.monitoring.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: prometheus.monitoring.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
